# darkside

./: Cargo.toml  LICENSE  README.md
examples/: ex_basic.rs  ex_input.rs  ex_list.rs  ex_region.rs  ex_tag.rs  ex_text.rs  hello_world.rs  list.rs
src/: app.rs  lib.rs
src/widgets/: input.rs  list.rs  mod.rs  region.rs  tag.rs  text.rs  util.rs  window.rs
